@@ -173,7 +173,7 @@ is ignored for UPSCABLE ether).
                                         <dd>
         [ simple | 940-0020B | 940-0023A ] <BR>[ smart | 940-0024B
         | 940-0024C ] <BR>[ 940-1524C | 940-0024G | 940-0095A | 940-0095B |
-        940-0095C | 940-00119A] <BR>[ ether | usb ]
+        940-0095C | 940-0119A] <BR>[ ether | usb ]
         <p>If you have a Smart or a SubSmart UPS (see table above), and you
         build your own cable, build a <b>Smart-Custom</b> cable (see the
         <a href="cables.html">Cables Chapter</a>  of this manual).  If you
